# guitar-safari

./: README.md  docker-compose.yaml  pyproject.toml
notebooks/: explore_gsv1_code.ipynb
scripts/: sqlalchemy_create_insert.py
src/scraping/: base_scraper.py  guitar_auctions_scraper.py  guitar_auctions_v1.py
